--- a/refugios.html
+++ b/refugios.html
@@ -175,7 +175,7 @@
                                 <td scope="row" data-label="ID">####</td>
                                 <td data-label="Nombre">Refugio 4</td>
                                 <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">calle falsa 123</td>
+                                <td data-label="Dirección">domicilio X</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
                                 <td data-label="Empleados">2</td>
@@ -186,7 +186,7 @@
                                 <td scope="row" data-label="ID">####</td>
                                 <td data-label="Nombre">Refugio 4</td>
                                 <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">calle falsa 123</td>
+                                <td data-label="Dirección">domicilio X</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
                                 <td data-label="Empleados">2</td>
@@ -197,7 +197,7 @@
                                 <td scope="row" data-label="ID">####</td>
                                 <td data-label="Nombre">Refugio 4</td>
                                 <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">calle falsa 123</td>
+                                <td data-label="Dirección">domicilio X</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
                                 <td data-label="Empleados">2</td>
@@ -208,7 +208,7 @@
                                 <td scope="row" data-label="ID">####</td>
                                 <td data-label="Nombre">Refugio 4</td>
                                 <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">calle falsa 123</td>
+                                <td data-label="Dirección">domicilio X</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
                                 <td data-label="Empleados">2</td>
@@ -219,7 +219,7 @@
                                 <td scope="row" data-label="ID">####</td>
                                 <td data-label="Nombre">Refugio 4</td>
                                 <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">calle falsa 123</td>
+                                <td data-label="Dirección">domicilio X</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
                                 <td data-label="Empleados">2</td>
@@ -230,7 +230,7 @@
                                 <td scope="row" data-label="ID">####</td>
                                 <td data-label="Nombre">Refugio 4</td>
                                 <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">calle falsa 123</td>
+                                <td data-label="Dirección">domicilio X</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
                                 <td data-label="Empleados">2</td>
@@ -241,7 +241,7 @@
                                 <td scope="row" data-label="ID">####</td>
                                 <td data-label="Nombre">Refugio 4</td>
                                 <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">calle falsa 123</td>
+                                <td data-label="Dirección">domicilio X</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
                                 <td data-label="Empleados">2</td>
@@ -252,7 +252,7 @@
                                 <td scope="row" data-label="ID">####</td>
                                 <td data-label="Nombre">Refugio 4</td>
                                 <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">calle falsa 123</td>
+                                <td data-label="Dirección">domicilio X</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
                                 <td data-label="Empleados">2</td>
@@ -263,7 +263,7 @@
                                 <td scope="row" data-label="ID">####</td>
                                 <td data-label="Nombre">Refugio 4</td>
                                 <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">calle falsa 123</td>
+                                <td data-label="Dirección">domicilio X</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
                                 <td data-label="Empleados">2</td>
@@ -274,7 +274,7 @@
                                 <td scope="row" data-label="ID">####</td>
                                 <td data-label="Nombre">Refugio 4</td>
                                 <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">calle falsa 123</td>
+                                <td data-label="Dirección">domicilio X</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
                                 <td data-label="Empleados">2</td>
@@ -285,7 +285,7 @@
                                 <td scope="row" data-label="ID">####</td>
                                 <td data-label="Nombre">Refugio 4</td>
                                 <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">calle falsa 123</td>
+                                <td data-label="Dirección">domicilio X</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
                                 <td data-label="Empleados">2</td>
@@ -296,7 +296,7 @@
                                 <td scope="row" data-label="ID">####</td>
                                 <td data-label="Nombre">Refugio 4</td>
                                 <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">calle falsa 123</td>
+                                <td data-label="Dirección">domicilio X</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
                                 <td data-label="Empleados">2</td>
@@ -307,7 +307,7 @@
                                 <td scope="row" data-label="ID">####</td>
                                 <td data-label="Nombre">Refugio 4</td>
                                 <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">calle falsa 123</td>
+                                <td data-label="Dirección">domicilio X</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
                                 <td data-label="Empleados">2</td>
@@ -318,7 +318,7 @@
                                 <td scope="row" data-label="ID">####</td>
                                 <td data-label="Nombre">Refugio 4</td>
                                 <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">calle falsa 123</td>
+                                <td data-label="Dirección">domicilio X</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
                                 <td data-label="Empleados">2</td>
@@ -329,7 +329,7 @@
                                 <td scope="row" data-label="ID">####</td>
                                 <td data-label="Nombre">Refugio 4</td>
                                 <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">calle falsa 123</td>
+                                <td data-label="Dirección">domicilio X</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
                                 <td data-label="Empleados">2</td>
@@ -340,7 +340,7 @@
                                 <td scope="row" data-label="ID">####</td>
                                 <td data-label="Nombre">Refugio 4</td>
                                 <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">calle falsa 123</td>
+                                <td data-label="Dirección">domicilio X</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
                                 <td data-label="Empleados">2</td>
@@ -351,7 +351,7 @@
                                 <td scope="row" data-label="ID">####</td>
                                 <td data-label="Nombre">Refugio 4</td>
                                 <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">calle falsa 123</td>
+                                <td data-label="Dirección">domicilio X</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
                                 <td data-label="Empleados">2</td>
@@ -362,7 +362,7 @@
                                 <td scope="row" data-label="ID">####</td>
                                 <td data-label="Nombre">Refugio 4</td>
                                 <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">calle falsa 123</td>
+                                <td data-label="Dirección">domicilio X</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
                                 <td data-label="Empleados">2</td>
@@ -373,7 +373,7 @@
                                 <td scope="row" data-label="ID">####</td>
                                 <td data-label="Nombre">Refugio 4</td>
                                 <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">calle falsa 123</td>
+                                <td data-label="Dirección">domicilio X</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
                                 <td data-label="Empleados">2</td>
